<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillColor="@color/fill_color"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:layout_marginTop="372dp"
        android:backgroundTint="@color/color_boton"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="true"
        android:onClick="LoginUsuario"
        android:text="@string/login"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/corner_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewLogo"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/olvidasteContra"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/ForgotPassword"
        android:textColor="#0277BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextEmailRecupero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:autofillHints="Email"
        android:textColor="#78909C"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="54dp"
        android:autofillHints="Password"
        android:ems="10"
        android:textColor="#78909C"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRecupero" />

    <ImageView
        android:id="@+id/imgViewLogo"
        android:layout_width="125dp"
        android:layout_height="147dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_group"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewSinCuenta"
        android:layout_width="169dp"
        android:layout_height="28dp"
        android:layout_marginStart="72dp"
        android:text="@string/no_tienes_cuenta"
        android:textColor="@color/color1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/textViewInicioTitle"
        android:layout_width="209dp"
        android:layout_height="55dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewLogo" />

    <TextView
        android:id="@+id/tvtVRegister"
        android:layout_width="73dp"
        android:layout_height="48dp"
        android:layout_marginEnd="84dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="RegistrarUsuario"
        android:text="@string/Registrate"
        android:textColor="#0277BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/txtVEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:text="@string/prompt_email"
        android:textColor="#4A5568"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailRecupero"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtVAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="1dp"
        android:text="@string/prompt_password"
        android:textColor="#4A5568"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>