<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillColor="@color/fill_color"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logocook" />

    <TextView
        android:id="@+id/txtvTituloAltaReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/title_altausuario"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Alta_Nombre_User"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvTituloAltaReg" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:background="@drawable/style_border_button"
        android:inputType="textPersonName"
        android:textColor="#78909C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewSurname"
        android:layout_width="57dp"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="128dp"
        android:text="@string/UserSurname"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvTituloAltaReg" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/style_border_button"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#78909C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSurname"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewPrefijo"
        android:layout_width="57dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/PrefijoUser"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:background="@drawable/style_border_button"
        android:inputType="textPersonName"
        android:text="@string/Mas54"
        android:textColor="#78909C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrefijo"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewtelefono"
        android:layout_width="74dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/TelefonoUser"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textViewPrefijo"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/style_border_button"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#78909C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewtelefono"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="26dp"
        android:text="@string/prompt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/prompt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:background="@drawable/style_border_button"
        android:inputType="textEmailAddress"
        android:textColor="#78909C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:background="@drawable/style_border_button"
        android:inputType="textPassword"
        android:textColor="#78909C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxTYC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/color2"
        android:onClick="habilitarBtnFinalizar"
        android:text="@string/terminosYcondiciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

    <Button
        android:id="@+id/btnFinalizarReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color1"
        android:fontFamily="sans-serif-medium"
        android:enabled="false"
        android:includeFontPadding="true"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/corner_button"
        android:layout_marginTop="26dp"
        android:text="@string/finalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTYC" />


</androidx.constraintlayout.widget.ConstraintLayout>